# madar-pos

./: .gitignore  PLAN.md  README.md  openapi.json
.audit-maps/: flutter-orders.md  flutter-receipts.md  flutter-shifts.md  rebuild-kotlin-gap.md  rebuild-offline-map.md  rebuild-swift-state.md
.github/workflows/: release.yml  rust-core-ci.yml
docs/: 01-ffi-surface.md  02-local-store-and-sync.md  03-backend-offline-changes.md  04-offline-audit.md  05-domain-audit.md  domain-inventory.json
docs/audit/: be-auth.md  be-inventory-delivery.md  be-offline-support.md  be-order-pricing-authority.md  be-shifts-cash.md  fe-cart-pricing.md  fe-checkout-payment-void.md  fe-delivery-realtime.md  fe-inventory-recipe.md  fe-menu-catalog.md  fe-offline-cache.md  fe-printing.md  fe-routing.md  fe-shift-auth.md
kotlin-app/: README.md  build.gradle.kts  compose_stability.conf  gradle.properties  settings.gradle.kts
kotlin-app/composeApp/: build.gradle.kts
kotlin-app/gradle/: libs.versions.toml
rust-core/: .env.example  .gitignore  Cargo.toml  rust-toolchain.toml
rust-core/.cargo/: mutants.toml
rust-core/crates/madar-core/fuzz/: Cargo.toml
rust-core/crates/madar-core/fuzz/fuzz_targets/: price_cart.rs  verify_pin.rs
rust-core/crates/sufrix-core/: Cargo.toml  build.rs  uniffi.toml
rust-core/crates/sufrix-core/src/: cart.rs  catstyle.rs  checkout.rs  config.rs  delivery.rs  error.rs  i18n.rs  lib.rs  menu.rs  net.rs  orders.rs  pricing.rs  receipt.rs  recipe.rs  session.rs  shift.rs  store.rs
rust-core/crates/sufrix-core/tests/: offline_replay.rs
rust-core/scripts/: preflight.sh
rust-core/tool/: build-android.sh  build-bindings.sh  build-ios.sh  generate_api.sh  run-swift-mac.sh  screenshot-swift.sh  smoketest-swift.sh  test-swift.sh  typecheck-swift-ui.sh  typecheck-swift.sh
swift-app/: Package.swift  README.md  project.yml
swift-app/MadarPOS.xcodeproj/: project.pbxproj
swift-app/SufrixPOS.xcworkspace/: contents.xcworkspacedata
tool/: gen-icons.sh  lucide_to_vd.py
(+389 files in other folders)
